# wasm-rust-tetris

./: Cargo.toml  LICENSE_MIT  README.md  gen_deploy_artifact.py  index.html  run_server.py
deploy_artifact/: index.js  package-lock.json  styles.css  wasm_rust_tris.d.ts
docs/: index.html  index.js  styles.css
docs/pkg/: wasm_rust_tris.d.ts  wasm_rust_tris.js  wasm_rust_tris_bg.wasm
pkg/: package.json  wasm_rust_tris.js  wasm_rust_tris_bg.d.ts  wasm_rust_tris_bg.wasm
pkg/snippets/wasm-rust-tris-fee5739d71355f10/: inline0.js
src/: lib.rs  tetris.rs  utils.rs
www/: index.html  index.js  package-lock.json  package.json
